[package]
name = "lite-session"
version = "1.0.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Create Session Tokens that are Resilient to Misuse and Highjacking"
homepage = "https://github.com/charleschege/LiteSession"
repository = "https://github.com/charleschege/LiteSession"
license = "Apache-2.0"
keywords = ["encryption", "sessions", "autonomous-secrets", "privacy", "embedded-security"]
categories = ["cryptography", "authentication", "embedded", "no-std"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.2"
blake3 = "0.3.7"
chacha20 = "0.6.0"
hex = { version = "0.4.2", default-features = false, features = ["alloc"]}
nanorand = { version = "0.5.2", features = ["chacha"] }
secrecy = { version = "0.7.0", features = ["serde"] }
tai64 = "3.1.0"
